# aoc-2025

./: Cargo.toml
src/: main.rs  puzzles.rs  util.rs
src/puzzles/: day1.rs  day10.rs  day12.rs  day15.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs
